# rsqlfluff_poc

./: Cargo.toml  build.rs  pyproject.toml  rsqlfluff.pyi
.github/workflows/: CI.yml
rsqlfluff/: Cargo.toml  output.txt  pyproject.toml
rsqlfluff/src/: lexer.rs  lib.rs  marker.rs  matcher.rs  templater.rs  token.rs
rsqlfluff_poc/: sample.py
sqlfluff/: __init__.py
src/: lexer.rs  lib.rs  marker.rs  matcher.rs  slice.rs  templater.rs  token.rs
src/dialect/: matcher.rs
src/templater/: fileslice.rs  templatefile.rs
src/token/: construction.rs  eq.rs  fmt.rs  mod.rs  python.rs
utils/: build_lexers.py
