[package]
name = "rsqlfluff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsqlfluff"
crate-type = ["cdylib"]

[dependencies]
fancy-regex = "0.14.0"
itertools = "0.14.0"
log = "0.4.25"
once_cell = "1.20.2"
pyo3 = "0.23.5"
regex = { version = "1.11.1", features = ["perf"] }
uuid = { version = "1.12.1", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11.6"
